Changes in 1.0rc1:
- Add support for base32 magnet links